--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -57,3 +57,8 @@
         </table>
     </div>
 </section>
+<footer class="navbar-fixed-bottom">
+    <div class="container text-center">
+        <pagination ng-if="$ctrl.state.loaded" page='$ctrl.page' events='$ctrl.events' maxLinks='10'/>
+    </div>
+</footer>
