--- a/src/app/dashboard/editComputer.html
+++ b/src/app/dashboard/editComputer.html
@@ -3,36 +3,44 @@
         <div class="row">
             <div class="col-xs-8 col-xs-offset-2 box">
                 <div class="label label-default pull-right">
-                    id: 0
+                    id: {{ $ctrl.computer.id }}
                 </div>
                 <h1>Edit Computer</h1>
 
-                <form action="editComputer" method="POST">
-                    <input type="hidden" value="0" id="id"/> <!-- TODO: Change this value with the computer id -->
+                <form ng-submit="$ctrl.submit()">
+                    <input type="hidden" ng-value="$ctrl.computer.id" ng-model="id" id="id"/>
                     <fieldset>
                         <div class="form-group">
                             <label for="computerName">Computer name</label>
-                            <input type="text" class="form-control" id="computerName" placeholder="Computer name">
+                            <input type="text" class="form-control" id="computerName"
+                                   name="computerName" ng-model="computerName"
+                                   placeholder="Computer name" ng-value="$ctrl.computer.name">
                         </div>
                         <div class="form-group">
                             <label for="introduced">Introduced date</label>
-                            <input type="date" class="form-control" id="introduced" placeholder="Introduced date">
+                            <input type="date" class="form-control" id="introduced"
+                                   name="introduced" ng-model="introduced"
+                                   placeholder="Introduced date" ng-value="$ctrl.computer.introduced">
                         </div>
                         <div class="form-group">
                             <label for="discontinued">Discontinued date</label>
-                            <input type="date" class="form-control" id="discontinued" placeholder="Discontinued date">
+                            <input type="date" class="form-control" id="discontinued"
+                                   name="discontinued" ng-model="discontinued"
+                                   placeholder="Discontinued date" ng-value="$ctrl.computer.discontinued">
                         </div>
                         <div class="form-group">
                             <label for="companyId">Company</label>
-                            <select class="form-control" id="companyId" >
-                                <option value="0">--</option>
+                            <select class="form-control" id="companyId" name="companyId" ng-model="companyId">
+                                <option ng-repeat="company in $ctrl.companies" ng-value="$ctrl.company.id">
+                                    {{ company.name }}
+                                </option>
                             </select>
                         </div>
                     </fieldset>
                     <div class="actions pull-right">
                         <input type="submit" value="Edit" class="btn btn-primary">
                         or
-                        <a href="dashboard.html" class="btn btn-default">Cancel</a>
+                        <a href="/dashboard" class="btn btn-default">Cancel</a>
                     </div>
                 </form>
             </div>
