--- a/src/app/computer/addComputer.html
+++ b/src/app/computer/addComputer.html
@@ -1,33 +1,35 @@
+<header-menu></header-menu>
+
 <section id="main">
     <div class="container">
         <div class="row">
             <div class="col-xs-8 col-xs-offset-2 box">
-                <h1>Add Computer</h1>
+                <h1 translate>computer.add</h1>
                 <form action="addComputer" method="POST">
                     <fieldset>
                         <div class="form-group">
-                            <label for="computerName">Computer name</label>
+                            <label for="computerName" translate>computer.name</label>
                             <input type="text" class="form-control" id="computerName" placeholder="Computer name">
                         </div>
                         <div class="form-group">
-                            <label for="introduced">Introduced date</label>
+                            <label for="introduced" translate>computer.introduced</label>
                             <input type="date" class="form-control" id="introduced" placeholder="Introduced date">
                         </div>
                         <div class="form-group">
-                            <label for="discontinued">Discontinued date</label>
+                            <label for="discontinued" translate>computer.discontinued</label>
                             <input type="date" class="form-control" id="discontinued" placeholder="Discontinued date">
                         </div>
                         <div class="form-group">
-                            <label for="companyId">Company</label>
+                            <label for="companyId" translate>computer.company</label>
                             <select class="form-control" id="companyId" >
                                 <option value="0">--</option>
                             </select>
                         </div>
                     </fieldset>
                     <div class="actions pull-right">
-                        <input type="submit" value="Add" class="btn btn-primary">
-                        or
-                        <a href="dashboard.html" class="btn btn-default">Cancel</a>
+                        <input type="submit" value="{{ 'add' | translate }}" class="btn btn-primary">
+                        {{ 'or' | translate }}
+                        <a href="../dashboard/dashboard.html" class="btn btn-default" translate>cancel</a>
                     </div>
                 </form>
             </div>
