--- a/src/app/computer/editComputer.html
+++ b/src/app/computer/editComputer.html
@@ -1,3 +1,5 @@
+<header-menu></header-menu>
+
 <section id="main">
     <div class="container">
         <div class="row">
@@ -5,31 +7,31 @@
                 <div class="label label-default pull-right">
                     id: {{ $ctrl.computer.id }}
                 </div>
-                <h1>Edit Computer</h1>
+                <h1 translate>computer.edit</h1>
 
                 <form ng-submit="$ctrl.submit()">
                     <input type="hidden" ng-value="$ctrl.computer.id" ng-model="id" id="id"/>
                     <fieldset>
                         <div class="form-group">
-                            <label for="computerName">Computer name</label>
+                            <label for="computerName" translate>computer.name</label>
                             <input type="text" class="form-control" id="computerName"
                                    name="computerName" ng-model="computerName"
                                    placeholder="Computer name" ng-value="$ctrl.computer.name">
                         </div>
                         <div class="form-group">
-                            <label for="introduced">Introduced date</label>
+                            <label for="introduced" translate>computer.introduced</label>
                             <input type="date" class="form-control" id="introduced"
                                    name="introduced" ng-model="introduced"
                                    placeholder="Introduced date" ng-value="$ctrl.computer.introduced">
                         </div>
                         <div class="form-group">
-                            <label for="discontinued">Discontinued date</label>
+                            <label for="discontinued" translate>computer.discontinued</label>
                             <input type="date" class="form-control" id="discontinued"
                                    name="discontinued" ng-model="discontinued"
                                    placeholder="Discontinued date" ng-value="$ctrl.computer.discontinued">
                         </div>
                         <div class="form-group">
-                            <label for="companyId">Company</label>
+                            <label for="companyId" translate>computer.company</label>
                             <select class="form-control" id="companyId" name="companyId" ng-model="companyId">
                                 <option ng-repeat="company in $ctrl.companies" ng-value="$ctrl.company.id">
                                     {{ company.name }}
@@ -38,9 +40,9 @@
                         </div>
                     </fieldset>
                     <div class="actions pull-right">
-                        <input type="submit" value="Edit" class="btn btn-primary">
-                        or
-                        <a href="/dashboard" class="btn btn-default">Cancel</a>
+                        <input type="submit" value="{{ 'edit' | translate }}" class="btn btn-primary">
+                        {{ 'or' | translate }}
+                        <a href="../dashboard/dashboard.html" class="btn btn-default" translate>cancel</a>
                     </div>
                 </form>
             </div>
